changes on layout

--- a/f1/templates/layout.html
+++ b/f1/templates/layout.html
@@ -16,7 +16,7 @@
 <body>
 <div class="row">
     <div class="col-md-3">
-        <a class="one" href="{%  url 'f1:f1' %}"> <button class="one">FORM 1</button> </a>
+        <a class="one" href="{%  url 'fi:fi' %}"> <button class="one">FORM 1</button> </a>
 
     </div>
     <div class=" col-md-3">
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-3">
 
-        <a href="{% url 'f4:f4' %}"> <button class="four">FORM 4</button> </a>
+        <a href="{% url 'fa:fa' %}"> <button class="four">FORM 4</button> </a>
     </div>
 
 
